src/styles/less/ChildDashboard.less
@import '~antd/dist/antd.less';
@import '~antd/lib/style/themes/default.less';
@import 'global.less';
@import 'variables.less';

.dash-container {
  .toprow,
  .bottomrow {
    @media @mobile {
      width: 100%;
    }
  }
  .ant-col.ant-col-13.accept-mission,
  .ant-col.ant-col-11.change-avatar,
  .ant-col.ant-col-11.trophy-room-button,
  .ant-col.ant-col-13.trophy-room {
    @media @mobile {
      max-width: 100%;
    }
  }

  .accept-mission,
  .accept-mission-ga1,
  .change-avatar,
  .trophy-room-button,
  .trophy-room,
  .leaderboard {
    border: 5px solid @header-nero;
    height: 35vh;
    cursor: pointer;
  }

  .accept-mission {
    background: url('../../assets/images/child_dashboard_images/accept_the_mission.svg')
      no-repeat;
    background-size: contain;
    background-position: center;
    background-color: #c6fd7e;

    img {
      z-index: 1;
      display: flex;
      justify-content: center;
      align-items: center;
    }
  }

  div.accept-mission {
    border-width: 0.75rem 0.375rem 0.75rem 0.75rem;
    @media @tablet {
      border-width: 0.5rem 0.25rem 0.5rem 0.5rem;
    }
    @media @mobile {
      border-width: 0.5rem 0.5rem 0.25rem 0.5rem;
    }
  }
  div.change-avatar {
    border-width: 0.75rem 0.75rem 0.75rem 0.375rem;
    @media @tablet {
      border-width: 0.5rem 0.5rem 0.5rem 0.25rem;
    }
    @media @mobile {
      border-width: 0.25rem 0.5rem 0.5rem 0.5rem;
    }
  }
  div.trophy-room-button {
    border-width: 0.75rem 0.75rem 0.75rem 0.375rem;
    @media @tablet {
      border-width: 0.5rem 0.5rem 0.5rem 0.25rem;
    }
    @media @mobile {
      border-width: 0.25rem 0.5rem 0.5rem 0.5rem;
    }
  }
  div.leaderboard {
    border-width: 0.75rem 0.375rem 0.75rem 0.75rem;
    @media @tablet {
      border-width: 0.5rem 0.25rem 0.5rem 0.5rem;
    }
    @media @mobile {
      border-width: 0.5rem 0.5rem 0.25rem 0.5rem;
    }
  }

  // Gamemode could use backend read write examples intohere
  .accept-mission-ga1 {
    background: url('../../assets/images/child_dashboard_images/accept_the_mission.svg')
      no-repeat;
    background-size: contain;
    background-position: center;
    background-color: #c6fd7e;
    opacity: 100%;
    cursor: pointer;

    img {
      z-index: 1;
      display: flex;
      justify-content: center;
      align-items: center;
    }
  }

  .accept-mission,
  img {
    z-index: 1;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .accept-mission-text {
    font-size: 3.2rem;
    font-family: 'Bangers', cursive;
    color: @white;
    text-shadow: -4px 0 black, 0 4px black, 4px 0 black, 0 -4px black;
    margin: 0 auto;
    @media @tablet, @mobile {
      padding: 0%;
      font-size: 2.5rem;
      text-align: center;
    }
  }

  .change-avatar {
    display: flex;
    justify-content: center;
    align-items: center;
    background: @burnt-sienna;
    img {
      max-width: 80%;
      max-height: 80%;
    }
  }

  .single-button-container {
    padding-top: 3%;
    display: flex;
    justify-content: space-evenly;
    @media @tablet, @mobile {
      flex-direction: column;
      align-items: center;
    }
  }
  .trophy-room-button {
    background: url('../../assets/images/gamemodeimg/explosion.png') no-repeat;
    background-size: contain;
    background-position: center;
    background-color: @bright-sun;
    opacity: 100%;
    cursor: pointer;
    display: flex;
    align-items: center;
    background: @bright-sun;
  }

  .trophy-room-button img {
    position: relative;
  }

  .trophy-room-button p {
    position: absolute;
    z-index: 1;
  }

  .multi-btn {
    display: flex;
    justify-content: center;
    align-items: center;
    background: @burnt-sienna;
    font-size: xx-large;
    font-family: 'bangers', cursive;
    margin-left: 0;
    width: 47%;
    min-height: 40vh;
    letter-spacing: 0.35vh;
    border: 5px solid @header-nero;
    @media @tablet, @mobile {
      width: 90%;
      min-height: 20vh;
      margin-top: 4%;
    }
  }

  .single-btn {
    display: flex;
    justify-content: center;
    align-items: center;
    background: @bright-sun;
    font-size: xx-large;
    font-family: 'bangers', cursive;
    margin-left: 0;
    width: 47%;
    min-height: 40vh;
    letter-spacing: 0.35vh;
    border: 5px solid @header-nero;
    @media @tablet, @mobile {
      width: 90%;
      min-height: 20vh;
      margin-top: 4%;
    }
  }

  .adventure-passport img {
    max-width: 80%;
    max-height: 80%;
    @media @mobile {
      margin-left: 10%;
    }
  }

  .trophy-room {
    background: @boston-blue;
    display: flex;
    justify-content: center;
    align-items: center;
    opacity: 75%;

    img {
      max-width: 80%;
      max-height: 80%;
    }
  }

  .leaderboard {
    display: flex;
    justify-content: center;
    align-items: center;
    background: @boston-blue;
    img {
      max-width: 80%;
      max-height: 80%;
    }
  }
}

.accept-mission:hover {
  opacity: 75%;

  .accept-mission-text {
    font-size: 4.5rem;
  }
}

.change-avatar:hover {
  opacity: 75%;

  img {
    max-width: 100%;
    max-height: 100%;
  }
}

.adventure-passport:hover {
  opacity: 75%;

  img {
    max-width: 100%;
    max-height: 100%;
  }
}

.single-btn:hover {
  animation: scale-up-singleplayer-btn linear 0.3s;
  transform: scale(1.01);
}

@keyframes scale-up-singleplayer-btn {
  from {
    transform: scale(1);
  }

  to {
    transform: scale(1.01);
  }
}

.trophy-room:hover {
  opacity: 100%;
}

.leaderboard:hover {
  opacity: 75%;

  img {
    max-width: 100%;
    max-height: 100%;
  }
}

.trophy-room-button:hover {
  opacity: 75%;

  p {
    font-size: 4.5rem;
  }
}

